--- a/style.css
+++ b/style.css
@@ -2,11 +2,23 @@ body {
    background-color: grey;
 }
 
-footer {
+h1 {
+   padding: 2rem;
    text-align: center;
 }
 
-.product {
+footer {
    text-align: center;
-   padding-top: 4rem;
+   padding: 3rem;
 }
+
+.legend {
+   font-size: 1.8rem;
+   font-weight: 600;
+}
+
+.heading {
+   font-size: 1.5rem;
+   font-weight: 400;
+}
+
